# DeepSORT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_ax650.sh  build_axcl_aarch64.sh  build_axcl_x86.sh  demo_axvsdk_deepsort.cpp  run_deepsort.cpp  test_detector.cpp  test_reid.cpp
.github/workflows/: build.yml
detector/: yolo_detector.cpp  yolo_detector.hpp
npu/runner/: ax_model_runner.hpp  logging.hpp
npu/runner/ax650/: ax_model_runner_ax650.cpp  ax_model_runner_ax650.hpp
npu/runner/axcl/: ax_model_runner_axcl.cpp  ax_model_runner_axcl.hpp  axcl_runtime.hpp
scripts/: build_common.sh
toolchains/: arm-AX620E-linux-uclibcgnueabihf.toolchain.cmake
tracker/deepsort/include/: FeatureTensor.h  dataType.h  reid_feature_extractor.hpp
tracker/deepsort/src/: FeatureTensor.cpp  reid_feature_extractor.cpp
